--- a/templates/blocks/espanel_block_tpl.html
+++ b/templates/blocks/espanel_block_tpl.html
@@ -9,7 +9,7 @@
   <{if ($program.logo) }>
     <img alt="<{$program.itemname}>" src="<{$program.itemurl}>/<{$program.logo}>">
   <{else  }>
-    <img alt="<{$program.itemname}>" src="">	
+    <button class="btn btn-large btn-primary" type="button"><{$program.itemname}></button>
   <{/if}>  
   </div>
   <div class="text-center"><{$program.itemname}></div>
