--- a/templates/esp_ad_index_tpl_b3.html
+++ b/templates/esp_ad_index_tpl_b3.html
@@ -1,23 +1,24 @@
 
-<div class="<{$block.row}>">
-
-<{foreach  key=k item=program   from=$block.item }>
+本模組配合  佈景管理 -- 選單設定，預設為[校務行政]選單。也提供區塊做顯示畫面。
+<div class="row">
+<{foreach  key=k item=program   from=$data.item }>
 <a    href="<{$program.itemurl}>">
-<div class="<{$block.span}><{$block.width}>">
+<div class="col-md-<{$data.width}>">
 <p>&nbsp;</p>
  <div class="text-center">
   <{if ($program.logo) }>
     <img alt="<{$program.itemname}>" src="<{$program.itemurl}>/<{$program.logo}>">
   <{else  }>
     <button class="btn btn-large btn-primary" type="button"><{$program.itemname}></button>
-  <{/if}>
+<{/if}>
   </div>
   <div class="text-center"><{$program.itemname}></div>
- </div>
+
+</div>
 </a>
 <{/foreach}>
 
 </div>
-<{if ($block.memo) }>
-<div class="alert alert-block"><{$block.memo}></div>
+<{if ($data.memo) }>
+<div class="alert alert-block"><{$data.memo}></div>
 <{/if}>
