--- a/templates/esp_ad_index_tpl_b3.html
+++ b/templates/esp_ad_index_tpl_b3.html
@@ -3,7 +3,7 @@
 <div class="row">
 <{foreach  key=k item=program   from=$data.item }>
 <a    href="<{$program.itemurl}>">
-<div class="col-md-<{$data.width}>">
+<div class="col-md-<{$data.width}> col-xs-<{$data.width}>">
 <p>&nbsp;</p>
  <div class="text-center">
   <{if ($program.logo) }>
