配小手機小螢幕

--- a/templates/blocks/espanel_block_tpl.html
+++ b/templates/blocks/espanel_block_tpl.html
@@ -3,7 +3,7 @@
 
 <{foreach  key=k item=program   from=$block.item }>
 <a    href="<{$program.itemurl}>">
-<div class="<{$block.span}><{$block.width}> <{$block.spanxs}><{$block.width}> ">
+<div class="<{$block.span}> <{$block.spanxs}> ">
 <p>&nbsp;</p>
  <div class="text-center">
   <{if ($program.logo) }>
