--- a/templates/blocks/espanel_block_tpl.html
+++ b/templates/blocks/espanel_block_tpl.html
@@ -1,23 +1,2 @@
-
-<div class="<{$block.row}>">
-
-<{foreach  key=k item=program   from=$block.item }>
-<a    href="<{$program.itemurl}>">
-<div class="<{$block.span}> <{$block.spanxs}> ">
-<p>&nbsp;</p>
- <div class="text-center">
-  <{if ($program.logo) }>
-    <img alt="<{$program.itemname}>" src="<{$program.itemurl}>/<{$program.logo}>">
-  <{else  }>
-    <button class="btn btn-large btn-primary" type="button"><{$program.itemname}></button>
-  <{/if}>
-  </div>
-  <div class="text-center"><{$program.itemname}></div>
- </div>
-</a>
-<{/foreach}>
-
-</div>
-<{if ($block.memo) }>
-<div class="alert alert-block"><{$block.memo}></div>
-<{/if}>
+<{assign var=this_file value=$smarty.template|basename|replace:'db:':''}>
+<{includeq file="$xoops_rootpath/modules/es_panel/templates/blocks/b4.tpl"}>
