--- a/templates/blocks/b4/espanel_block_tpl.html
+++ b/templates/blocks/b4/espanel_block_tpl.html
@@ -3,19 +3,18 @@
 
 <{foreach  key=k item=program   from=$block.item }>
 <div class="col-<{$block.width}>  ">
-<a    href="<{$program.itemurl}>">
 
-<p>&nbsp;</p>
  <div class="text-center">
+  <a    href="<{$program.itemurl}>">
   <{if ($program.logo) }>
-    <img alt="<{$program.itemname}>" src="<{$program.itemurl}>/<{$program.logo}>" title="<{$program.itemname}>" >
+    <img alt="<{$program.itemname}>" src="<{$program.itemurl}>/<{$program.logo}>" title="<{$program.itemname}>" alt="<{$program.itemname}>">
   <{else  }>
-    <button class="btn btn-large btn-primary" type="button" title="<{$program.itemname}>" ><{$program.itemname}></button>
+    <button class="btn btn-large btn-primary" type="button" title="<{$program.itemname}>" alt="<{$program.itemname}>" ><{$program.itemname}></button>
   <{/if}>
-  </div>
+  </a>
+ </div>
 
-
-</a>
+<br />
  </div>
 <{/foreach}>
 
