--- a/templates/blocks/b3/espanel_block_tpl.html
+++ b/templates/blocks/b3/espanel_block_tpl.html
@@ -2,19 +2,21 @@
 <div class="<{$block.row}>">
 
 <{foreach  key=k item=program   from=$block.item }>
-<a    href="<{$program.itemurl}>">
+
 <div class="<{$block.span}> <{$block.spanxs}> ">
-<p>&nbsp;</p>
+
  <div class="text-center">
+  <a    href="<{$program.itemurl}>">
   <{if ($program.logo) }>
-    <img alt="<{$program.itemname}>" src="<{$program.itemurl}>/<{$program.logo}>" title="<{$program.itemname}>">
+    <img alt="<{$program.itemname}>" src="<{$program.itemurl}>/<{$program.logo}>" title="<{$program.itemname}>" alt="<{$program.itemname}>">
   <{else  }>
-    <button class="btn btn-large btn-primary" type="button" title="<{$program.itemname}>"><{$program.itemname}></button>
+    <button class="btn btn-large btn-primary" type="button" title="<{$program.itemname}>" alt="<{$program.itemname}>"><{$program.itemname}></button>
   <{/if}>
-  </div>
- 
+  </a>
  </div>
-</a>
+ <br />
+ </div>
+
 <{/foreach}>
 
 </div>
